# tensorflow

./: .gitignore  CMakeLists.txt  configure.py
tensorflow/: BUILD
tensorflow/contrib/cmake/: CMakeLists.txt  resolve_duplicate_filenames.cmake  tf_c.cmake  tf_cc_ops.cmake  tf_core_cpu.cmake  tf_core_direct_session.cmake  tf_core_distributed_runtime.cmake  tf_core_framework.cmake  tf_core_kernels.cmake  tf_core_ops.cmake  tf_core_profiler.cmake  tf_grappler.cmake  tf_label_image_example.cmake  tf_python.cmake  tf_shared_lib.cmake  tf_stream_executor.cmake  tf_tests.cmake  tf_tools.cmake  tf_tutorials.cmake
tensorflow/contrib/cmake/cmake/: Config.cmake.in
tensorflow/contrib/cmake/cmake/Hunter/: config.cmake
tensorflow/contrib/verbs/: grpc_verbs_service_impl.cc
tensorflow/core/kernels/: adjust_contrast_op.cc  adjust_contrast_op.h  adjust_hue_op.cc  adjust_hue_op.h  adjust_saturation_op.cc  adjust_saturation_op.h  aggregate_ops.h  aggregate_ops_cpu.h  argmax_op.cc  argmax_op.h  assign_op.h  avgpooling_op.cc  batch_matmul_op_impl.h  batch_norm_op.cc  batch_norm_op.h  batchtospace_op.cc  betainc_op.cc  betainc_op.h  bias_op.cc  bias_op.h  bias_op_gpu.h  bincount_op.h  bincount_op_gpu.cu.cc  bounds_check.h  bucketize_op.h  bucketize_op_gpu.cu.cc  cast_op.h  check_numerics_op_gpu.cu.cc  cholesky_grad.cc  cholesky_op.cc  colorspace_op.cc  colorspace_op.h  compare_and_bitpack_op.cc  compare_and_bitpack_op.h  compare_and_bitpack_op_gpu.cu.cc  concat_lib.h  concat_lib_gpu.cc  concat_lib_gpu_impl.cu.cc  concat_op.cc  conditional_accumulator_base.h  (+200 more)
tensorflow/core/kernels/neon/: depthwiseconv_float.h  neon_depthwise_conv_op.cc
tensorflow/core/lib/core/: threadpool.cc
tensorflow/core/platform/cloud/: gcs_file_system.cc  google_auth_provider.cc  oauth_client.h
tensorflow/core/platform/default/: mutex.h
tensorflow/core/platform/default/gpu/: cupti_wrapper.h
tensorflow/core/profiler/internal/: tfprof_timeline.h
tensorflow/docs_src/mobile/: ios_build.md
tensorflow/tools/git/: gen_git_source.py
